# Rx

./: Cargo.toml  LICENSE.txt  README.md  TODO.md
.github/workflows/: release.yml
src/: app.rs  config.rs  dumpfile.rs  error.rs  fileutils.rs  main.rs  output.rs  renamer.rs  solver.rs  test.txt  text_diff.rs
