[package]
name = "rx"
version = "0.1.0"
authors = ["iamgabrielsoft <iamgabrielsoft@gmail.com>"]
description = "Rename your files and directories using your favorite text editor"
edition = "2021"
keywords = ["cli", "tool", "rename", "file-renamer", "directory"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
ansi_term = "0.11"
atty = "0.2"
clap = "~2.32"
chrono = "0.4"
path_abs = "0.4"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3"
walkdir= "2"
difference = "2.0.0"
any_ascii = "0.3.0"




[build-dependencies]
clap = "~2.32"